# pedigree

./: README.md  pyproject.toml
src/pedigree/: __init__.py  model.py  store.py  visualizer.py
tests/: test_pedigree.py
